# auralogs-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
src/: config.rs  entry.rs  error.rs  global.rs  lib.rs  log_bridge.rs  panic_capture.rs  tracing_layer.rs  transport.rs
tests/: sdk.rs
